Added support for downloading next code in android app

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RoverCoder</string>
+    <string name="run_next_code">Run next code</string>
+    <string name="stop_code">Stop code</string>
+    <string name="please_connect_to_ev3_via_bluetooth">Please connect to EV3 via Bluetooth...</string>
 </resources>
